SERVER-33660 Only check out session for operations with a txnNumber